DEVOPS/kairos02/jitsi/jitsi-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: jitsi
  namespace: sesiones-clinicas
spec:
  host: sessions.esesclindes.santpau.cat
  port:
    targetPort: http
  tls:
    termination: edge
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIHKzCCBZOgAwIBAgIQKoF7aaw46VfyE/xRS097DjANBgkqhkiG9w0BAQsFADBgMQswCQYDVQQG
[...]
      dnEbJx+iYjpmyW/343SY
      -----END CERTIFICATE-----
      subject=CN=GEANT TLS RSA 1, O=Hellenic Academic and Research Institutions CA, C=GR
      issuer=CN=HARICA TLS RSA Root CA 2021, O=Hellenic Academic and Research Institutions CA, C=GR
      -----BEGIN CERTIFICATE-----
      MIIGBTCCA+2gAwIBAgIQFNV782kiKCGaVWf6kWUbIjANBgkqhkiG9w0BAQsFADBsMQswCQYDVQQG
[...]
      V9IaUQGJ
      -----END CERTIFICATE-----
      subject=CN=HARICA TLS RSA Root CA 2021, O=Hellenic Academic and Research Institutions CA, C=GR
      issuer=CN=Hellenic Academic and Research Institutions RootCA 2015, O=Hellenic Academic and Research Institutions Cert. Authority, L=Athens, C=GR
      -----BEGIN CERTIFICATE-----
      MIIGwDCCBKigAwIBAgIQKmCG1NTeRcleS5j7vy+/JjANBgkqhkiG9w0BAQsFADCBpjELMAkGA1UE
[...]
      yGR0asw7CooV2DCfiEJlIsKzLcPZew==
      -----END CERTIFICATE-----
    key: |
      -----BEGIN PRIVATE KEY-----
      MIIEvwIBADANBgkqhkiG9w0BAQEFAASCBKkwggSlAgEAAoIBAQDq+Ig/hd8isLZF
[...]
      sINATw4BG2pnJ9SYrhCiIMpLEw==
      -----END PRIVATE KEY-----
  to:
    kind: Service
    name: web
